--- a/PracticeProject4/.project
+++ b/PracticeProject4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LiveClass</name>
+	<name>PracticeProject4</name>
 	<comment></comment>
 	<projects>
 	</projects>
